Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11251

replay-single test_70b test: ASSERTION( req_transno < next_transno ) failed: LBUG

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0
    • None
    • None
    • 3
    • 9223372036854775807

      15819.626897] LustreError: 29261:0:(ldlm_lib.c:1898:check_for_next_transno()) ASSERTION( req_transno < next_transno ) failed: req_transno 8589942819next_transno8589942804
      [15819.633613] LustreError: 29261:0:(ldlm_lib.c:1898:check_for_next_transno()) LBUG
      [15819.637229] Pid: 29261, comm: tgt_recover_1
      [15819.639958]
      Call Trace:
      [15819.644265] [<ffffffffc04287ae>] libcfs_call_trace+0x4e/0x60 [libcfs]
      [15819.647556] [<ffffffffc042883c>] lbug_with_loc+0x4c/0xb0 [libcfs]
      [15819.651466] [<ffffffffc085f227>] check_for_next_transno+0x697/0x6d0 [ptlrpc]
      [15819.655373] [<ffffffffc0644291>] ? lprocfs_counter_sub+0xc1/0x130 [obdclass]
      [15819.658772] [<ffffffffc085eb90>] ? check_for_next_transno+0x0/0x6d0 [ptlrpc]
      [15819.662138] [<ffffffffc085c28d>] target_recovery_overseer+0xcd/0x6f0 [ptlrpc]
      [15819.665520] [<ffffffffc0858d80>] ? exp_req_replay_healthy_or_from_mdt+0x0/0x30 [ptlrpc]
      [15819.669311] [<ffffffffc08a9d5e>] ? ptlrpc_server_drop_request+0xce/0x6d0 [ptlrpc]
      [15819.672758] [<ffffffffc0863ed2>] replay_request_or_update.isra.21+0xf2/0x8c0 [ptlrpc]
      [15819.676269] [<ffffffffc0864cb6>] target_recovery_thread+0x616/0x1370 [ptlrpc]
      [15819.679603] [<ffffffffc08646a0>] ? target_recovery_thread+0x0/0x1370 [ptlrpc]
      [15819.682960] [<ffffffff810b4031>] kthread+0xd1/0xe0
      [15819.685655] [<ffffffff810b3f60>] ? kthread+0x0/0xe0
      [15819.688378] [<ffffffff816c1577>] ret_from_fork+0x77/0xb0
      [15819.691171] [<ffffffff810b3f60>] ? kthread+0x0/0xe0
      [15819.693853]
      [15819.695623] Kernel panic - not syncing: LBUG

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: